# huang-rhys-explorer-streamlit-v2

./: LICENSE  README.md  STREAMLIT_DEPLOY.md  app.py  build_app.py  cspbbr3_absorption_reference.csv  environment.yml  pyproject.toml  requirements.txt  sample_spectrum.csv  streamlit_app.py
huang_rhys/: __init__.py  data_io.py  model.py  photon_recycling.py  ui.py
