[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huang-rhys-explorer"
version = "2.0.0"
description = "Interactive Huang–Rhys spectra, self-absorption, and photon-recycling explorer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
web = [
  "pandas>=2.0,<3",
  "plotly>=5.20,<7",
  "streamlit>=1.51,<2",
]

[project.scripts]
huang-rhys-explorer = "huang_rhys.ui:launch"

[tool.setuptools.packages.find]
include = ["huang_rhys*"]
